force-app/main/default/objects/EBD_Consultant__c/EBD_Consultant__c.object-meta.xml
<CustomObject>
    <label>EBD Consultant</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>EBD Consultant Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>EBD Consultants</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>