force-app/main/default/objects/EBD_Consultant__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Company</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>EBD Consultants</relationshipLabel>
    <relationshipName>EBD_Consultants</relationshipName>
    <type>Lookup</type>
</CustomField>