force-app/main/default/objects/EBD_Consultant__c/fields/Consulting_Firm1__c.field-meta.xml
<CustomField>
    <fullName>Consulting_Firm1__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Consulting Firm</label>
    <type>TextArea</type>
</CustomField>