force-app/main/default/objects/EBD_Consultant__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>EBD Consultants</relationshipLabel>
    <relationshipName>EBD_Consultants</relationshipName>
    <type>Lookup</type>
</CustomField>