force-app/main/default/objects/EBD_Consultant__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Role</label>
    <type>TextArea</type>
</CustomField>